client/static/css/layout.css
* {
  box-sizing: border-box;
}

::-webkit-scrollbar-track
{
	border: 1px solid #1d272f;
	background-color: #1d272f;
}

::-webkit-scrollbar
{
	width: 10px;
	background-color: #1d272f;
}

::-webkit-scrollbar-thumb
{
	background-color: #AAA;	
}

::-webkit-scrollbar-corner {
  background: #1d272f;
}

::-webkit-resizer {
  background: #1d272f;
}

#mmi_svg {
  background: rgb(0, 0, 0);
}

pre {
	padding: 0;
	margin: 0;
	font-size: 12px;
	line-height: 12px;
}

h2.teal {
  color: #26343e;
  background-color: #00b9a0;
}
h2.magenta {
  color: #26343e;
  background-color: rgba(255, 0, 255, 0.692);
}

h2 {
  margin: 0px;
  padding-left: 10px;
  line-height: 36px;
  font-size: 16px;
  font-weight: bold;
  /*margin-bottom: 5px;*/
}

body {
  margin: 0;
  font: 12px/1.5 Arial, Helvetica, sans-serif;
  background: #1d272f;
  color: #FFFFFF;
  text-align: left;
  scrollbar-color: #AAA #1d272f;
}

.wrap {
  width: auto;

  display: grid;
  grid-template-columns: auto;/*300px auto; /* 100px auto 200px*/
  grid-template-rows: auto 600px;
  height: 100vh;
}

/* Create three unequal columns that floats next to each other */
.column {
  /*float: left;*/
  display: grid;

  border: 1px solid #00b9a0;
  margin-top: 10px;
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
}

/* Left column*/
.column.leftside {
  border: 1px solid rgba(255, 0, 255, 0.692);
  display: inline;
  grid-column: 1;
} 

/* Middle column */
.column.middle {
  display: inline;
  grid-column: 1; /* 2 */
  background-color: #009b86;
}

/* right column */
.column.rightside {
  display: inline;
  grid-column: 3; /* 2 */
  resize: both;
  overflow: auto;
  /*display: none;*/
}

.content {
  padding-top: 0px;
  padding-bottom: 2px;
  padding-left: 2px;
  padding-right: 2px;
}

/* Style the footer */
.footer {
  text-align: left;
  border: 1px solid rgba(255, 0, 255, 0.692);
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
  padding: 10px;
  padding-bottom: 16px;

	grid-row:   2;
	grid-column-start: 1;
	grid-column-end:   3;/* 4 */

	display: grid;
  grid-template-rows: auto 52px;

  resize: both;
  overflow: auto;
}

/* Style the tab */
.tab {
  overflow: hidden;
  grid-row: 2;
}


/* Style the buttons that are used to open the tab content */
.tab button {
  background-color: inherit;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 7px 8px;
  transition: 0.3s;
}

/* Middle column */
.mapButton {
  color: #26343e;
  background-color: #009b86;
  text-decoration:none;
  border: none;
  outline: none;
  padding: 7px 8px;
  transition: 0.3s;
  font-size: 16px;
  font-weight: bold;

  display: inline-block;
}

.mapButton:hover {
  background-color: #00b9a0;
}

.mapButton:active {
  transition: 0s;
  background-color: #00e4c5;
}

ul.tabs {
  padding: 0px 0;
  font-size: 0;
  margin: 0;
  list-style-type: none;
  text-align: left;

  /*used for scroll bar*/
  overflow-x: scroll;
  white-space: nowrap;
}

ul.tabs li {
  display: inline-flex;
  margin: 0;
  margin-right: 3px;
}

ul.tabs li a {
  font: 12px Arial, Helvetica, sans-serif;
  color: #FFFFFF;
  text-decoration: none;
  position: relative;
  padding: 7px 8px;
  outline: none;
}

ul.tabs li.selected a, ul.tabs li.selected a:hover {
  position: relative;
  top: 0px;
  font-weight: underline;
  padding-right: -5px;
  color: #000;/*#FFFFFF;*/
  background: #aaa;
}

/* Style the tab content */
div.tabcontents {
  padding: 6px 12px;
  height: 100%;
  background: #000;
  grid-row: 1;
  overflow-y: auto;

}

.closeable {
  background-image: url('../img/close.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  position: relative;
  right: -4px;
  top: 4px;
}

.tabcontents .unselected {
  display: none;
}

.controlInput {
  background-color: #000;
  border: none;
  outline: none;
  padding: 7px 8px;
  transition: 0.3s;
  color: #FFFFFF;
  margin-bottom: 10px;
  font-size: 12px;
  font-weight: normal;
  width: 100%;
}

.controlBtn {
  background-color:  rgba(255, 0, 255, 0.192);
  border: none;
  outline: none;
  padding: 7px 8px;
  transition: 0.3s;
  color: #FFFFFF;
  width: 100%;
  margin-bottom: 10px;
  font-size: 16px;
  font-weight: bold;
}

.controlBtn:hover {
  background-color: rgba(255, 0, 255, 0.692);
}

.controlBtn:active {
  transition: 0s;
  background-color: #F1F;
}


.aModal {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #26343e;
    opacity: 0.5;
    display: none;
}

.aPop {
    position: absolute;
    display: none;
}

.aPop-title {
    margin: 0px;
    padding-left: 10px;
    line-height: 36px;
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 5px;
    color: #26343e;
    background-color: rgba(255, 0, 255, 0.692);
/*  height: 20px;
    padding: 5px;*/

    cursor: move;
}

.aPop-close {
    padding-right: 8px;
    float: right;
    cursor: pointer;
    opacity: 0.2;
    filter: alpha(opacity=20);
}
.aPop-close:hover {
  opacity: 0.8;
  filter: alpha(opacity=80);
}

.aPop-content {
    min-width: 400px;
    min-height: 200px;
    background: #26343e;
    padding: 5px;
    margin: 0;
    font-size: 12px;
    line-height: 12px;
}

/*Color the table rows*/
#mmi_svg .tabulator-table .tabulator-row{
  color:#fff;
  background-color: #000;
}

/*Color even rows*/
#mmi_svg .tabulator-table .tabulator-row:nth-child(even) {
  background-color: #444;
}


@keyframes blinker_info {
  0% {
    background-color: rgb(0, 0, 255);
  }
  49% {
    background-color: rgb(0, 0, 255);
  }
  50% {
    background-color: rgb(0, 0, 0);
  }
  100% {
    background-color: rgb(0, 0, 0);
  }
}

@keyframes blinker_low {
  0% {
    background-color: rgb(125, 125, 125);
  }
  49% {
    background-color: rgb(125, 125, 125);
  }
  50% {
    background-color: rgb(0, 0, 0);
  }
  100% {
    background-color: rgb(0, 0, 0);
  }
}

@keyframes blinker_medium {
  0% {
    background-color: rgb(255, 0, 195);
  }
  49% {
    background-color: rgb(255, 0, 195);
  }
  50% {
    background-color: rgb(0, 0, 0);
  }
  100% {
    background-color: rgb(0, 0, 0);
  }
}

@keyframes blinker_high {
  0% {
    background-color: rgb(255, 0, 0);
  }
  49% {
    background-color: rgb(255, 0, 0);
  }
  50% {
    background-color: rgb(0, 0, 0);
  }
  100% {
    background-color: rgb(0, 0, 0);
  }
}

@keyframes blinker_critical {
  0% {
    background-color: rgb(179, 0, 255);
  }
  49% {
    background-color: rgb(179, 0, 255);
  }
  50% {
    background-color: rgb(0, 0, 0);
  }
  100% {
    background-color: rgb(0, 0, 0);
  }
}



.modal-fader {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  z-index: 99998;
  background: rgba(0,0,0,0.200);
}
.modal-fader.active {
  display: block;
}
.modal-window {
  display: none;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  z-index: 99999;
  color: #000;
  background: #fff;
  padding: 20px;
  border-radius: 5px;
  font-family: sans-serif;
  top: 50px;
}
.modal-window.active {
  display: block;
}

.modal-window h1,
.modal-window h2,
.modal-window h3,
.modal-window h4,
.modal-window h5,
.modal-window h6 {
  margin: 0;
}

.modal-btn {
  background: #36a5a5;
  border: none;
  color: #fff;
  padding: 10px 15px;
  box-shadow: none;
  border-radius: 3px;
  text-decoration: none;
}

.OperSidebar {
  font-size: 18px;
  line-height: 18px;
}

.OperBorder {
  border: solid rgb(0, 0, 0);
}

.Btn {
  background: #dadada;
  border: none;
  color: #000000;
  padding: 6px 9px;
  margin: 5px;
  box-shadow: none;
  border-radius: 3px;
  text-decoration: none;
  font-size: 18px;
  line-height: 18px;
}

.Btn.SelectBtn {
  width: 193px;
}

.Btn.CancelBtn {
  width: 193px;
  margin: 5px -8px 5px 5px;
}

.Btn.OperBtn {
  width: 400px;
}

.Btn:hover {
  background-color: rgba(149, 149, 149, 0.692);
}

.Btn:active {
  transition: 0s;
  background-color: rgb(109, 109, 109);
}

